tests/script_errors/lexer_invalid_float_exp/error.txt
Error: 
    1 | 12.0e
      | ^^^^ An invalid float literal